# lab3

./: CMakeLists.txt  README.md  main.cpp
abstract_data_type/: SegmentedDeque.h  SparseMatrix.h
auxiliary_types/: Complex.h  Person.cpp  Person.h
cli/: CLI.cpp  CLI.h
sequence_lab2/: ArraySequence.h  BaseCollection.h  DynamicArray.h  LinkedList.h  ListSequence.h  Sequence.h
smart_pointer/: SharedPointer.h  UniquePointer.h
test/lab2/: ImmutableArraySequenceTest.cpp  ImmutableArraySequenceTest.h  ImmutableListSequenceTest.cpp  ImmutableListSequenceTest.h  MutableArraySequenceTest.cpp  MutableArraySequenceTest.h  MutableListSequenceTest.cpp  MutableListSequenceTest.h
test/lab3/: ComplexTest.cpp  ComplexTest.h  SegmentedDequeTest.cpp  SegmentedDequeTest.h  SmartPointerTest.cpp  SmartPointerTest.h  SparseMatrixTest.cpp  SparseMatrixTest.h
